@@ -63,6 +63,8 @@ Thanks to Jaroslaw Jarmolowicz for the patch
 
 Bug fixes:
 
+The overview- and rotated table- tabs broke when more results where read.
+
 DBDiff Plugin: Loading of the DBDiff Object tree menus failed when an Object tree window was opened:
    java.lang.IllegalStateException: ObjectTreeApi can only be provided for SessionInternalFrame or ObjectTreeInternalFrame
    at net.sourceforge.squirrel_sql.client.session.Session.getObjectTreeAPIOfActiveSessionWindow(Session.java:962)
